fix: overflow: hidden delete, table width for statistic 500 -> 400

--- a/src/components/App/Antd.scss
+++ b/src/components/App/Antd.scss
@@ -15,3 +15,7 @@
 .ant-table-cell-row-hover {
   background: lightblue!important;
 }
+
+.ant-card.customCard .ant-card-body {
+  padding-top: 0 !important;
+}
