--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,8 +1,6 @@
 @import '../../constants/constants.scss';
 
 body {
-  overflow: hidden;
-
   .page {
     width: 100%;
     height: 100%;
