--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -7,9 +7,6 @@
   align-items: center;
   justify-content: space-between;
   box-sizing: border-box;
-  position: absolute;
-  bottom: 0;
-  left: 0;
 
   .logo {
     max-width: 80px;
