--- a/src/components/Statistics/Statistics.scss
+++ b/src/components/Statistics/Statistics.scss
@@ -1,13 +1,11 @@
 .table {
-  margin-top: 50px;
   display: flex;
   justify-content: center;
   width: 100%;
 
   .goods {
-    width: 500px;
+    width: 400px;
     margin-left: 15px;
-    margin-top: 20px;
     margin-bottom: 20px;
     height: 100%;
     display: flex;
